--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<html>
+  <title>
+    First Website
+  </title>
+  
+  <Body>
+    <h1> This is my first git hub page</h1>
+    </Body>
+  
+  <style>
+    Body{
+      background-color:green;
+  </style>
+  </html>
