--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>test: html-form-send-email-via-google-script-without-server</title>
+  <title>test</title>
 
   <meta name="description" content="Test all HTML form and input elements for html-form-send-email-via-google-script-without-server." />
   <meta name="author" content="dwyl">
@@ -26,7 +26,7 @@
   </p>
 
 
-  <form id="gform" method="POST" class="pure-form pure-form-stacked" action="https://script.google.com/macros/s/AKfycbyF7zsZXQUZLKBOaVKfsrzyr30FPHprgqd8flvC5WeuYQJnc5E/exec">
+  <form id="gform" method="POST" class="pure-form pure-form-stacked" action="https://script.google.com/macros/s/AKfycbyrkdW6Wi2hfiy1k4yJbnJ6qbGfRCbXcI9Ho59QIZtHh9yTQ4Sv/exec">
 
     <!--submit/button-->
     <button class="button-success pure-button button-xlarge">
@@ -179,7 +179,7 @@
     <!--url-->
     <fieldset class="pure-group">
       <label for="url">URL</label>
-      <input id="url" type="url" name="url" value="https://github.com/dwyl/html-form-send-email-via-google-script-without-server" />
+      <input id="url" type="url" name="url" value="https://kreuter97.github.com/test/" />
     </fieldset>
 
     <!--week-->
@@ -198,7 +198,7 @@
       We will get back to you soon!</h2>
   </div>
 
-  <script data-cfasync="false" type="text/javascript" src="form-submission-handler.js"></script>
+  <script data-cfasync="false" type="text/javascript" src="kreuter97.github.io/test/form-submission-handler.js"></script>
 
 </body>
 </html>
